# dirtytorch

./: MANIFEST.in  README.md  build-snippet-database.py  docker-compose.yml  enter-dev.sh  pyproject.toml  requirements.txt  train_utils.py
dirtytorch/: __init__.py  __main__.py  functable.py  init_this_dir.py  model_patcher.py  snippets.json  tripletstuffs.py  video_utils.py
dirtytorch/minigym/: config.py
dirtytorch/nn/: balanced_bce_losses.py  indexed_image_folder.py  patcher.py  pickle-dataset.py  reshape.py
dirtytorch/onnx/: classifier.py  ctc_classifier.py
dirtytorch/pl/: callbacks.py  loggers.py
dirtytorch/scripts/: enter-dev.py  enterdev.py  enterdev_v1.py  enterdev_v2.py  split-file.py  splitfile.py
dirtytorch/utils/: autoname.py  dict.py  find.py  functable.py  mask_to_polygon.py  polygon.py  read.py  stats.py  with-config.py
docker/: .bashrc  Dockerfile  build.sh  extra.bashrc  jupyterlab-overrides.json  requirements.txt  unsafe-jupyter-notebook
torchstuffs/: retinaface_utils.py
