[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dirtytorch"
version = "1.0.0"
dependencies = []

[tool.setuptools]
packages = [
	"dirtytorch",
	"dirtytorch.scripts",
	"dirtytorch.nn",
	"dirtytorch.pl",
	# "dirtytorch.model_patcher", not needed
]

[project.scripts]
dirty="dirtytorch.__main__:main"
enter-dev="dirtytorch.scripts.enterdev:main"
