[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dirtytorch"
version = "1.1.1"
dependencies = []

[tool.setuptools]
packages = [
	"dirtytorch",
	"dirtytorch.scripts",
	"dirtytorch.utils",
	"dirtytorch.nn",
	"dirtytorch.onnx",
	"dirtytorch.pl",
]

[project.scripts]
dirty="dirtytorch.__main__:main"
enter-dev="dirtytorch.scripts.enterdev:main"
