[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dirtytorch"
version = "1.2.1"
dependencies = []

[tool.setuptools]
packages = [
	"dirtytorch",
	"dirtytorch.scripts",
	"dirtytorch.utils",
	"dirtytorch.nn",
	"dirtytorch.onnx",
	"dirtytorch.pl",
]

[project.scripts]
dirty="dirtytorch.__main__:main"
enter-dev="dirtytorch.scripts.enterdev_v2:main"
split-file="dirtytorch.scripts.splitfile:main"
